python-api/k8s/canary/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api-stable
  labels:
    app: python-api
spec:
  selector:
    app: python-api
    version: stable
  ports:
    - name: http-port
      port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
