python-api/k8s/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-a-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: ${ACM_CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/actions.forward-stable: >
      {"type":"forward","forwardConfig":{"targetGroups":[
        {"serviceName":"python-api-stable","servicePort":"80","weight":90},
        {"serviceName":"python-api-canary","servicePort":"80","weight":10}
      ]}}
spec:
  ingressClassName: alb
  rules:
    - host: ${ROUTE53_URL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forward-stable
                port:
                  name: use-annotation

          - path: /stable
            pathType: Prefix
            backend:
              service:
                name: python-api-stable
                port:
                  number: 80

          - path: /canary
            pathType: Prefix
            backend:
              service:
                name: python-api-canary
                port:
                  number: 80
